--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 
     <link href="https://fonts.googleapis.com/css2?family=Archivo:ital,wght@0,100..900;1,100..900&display=swap"
         rel="stylesheet">
+    <link rel="icon" href="assets/icons/inteligencia-artificial.png" type="image/png">
 </head>
 
 <body>
